# Embedded

./: README.md
LAB01_HelloWorld/LAB01_Blinky/: .cproject  .mxproject  .project  CMakeLists.txt
LAB01_HelloWorld/LAB01_SelfTest/: .cproject  .mxproject  .project  CMakeLists.txt
LAB01_HelloWorld/LAB01_SelfTest/Core/Inc/: main.h  self_test.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
LAB01_HelloWorld/LAB01_SelfTest/Core/Src/: barchart.c  main.c  self_test.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
LAB01_HelloWorld/LAB01_SelfTest/Core/Startup/: startup_stm32l476rgtx.s
LAB01_HelloWorld/LAB01_SelfTest/Tests/inc/: test_buttons.h  test_imu.h  test_leds.h  test_matrix.h  test_mics.h  test_poti.h  test_temp.h
LAB01_HelloWorld/LAB01_SelfTest/Tests/src/: test_buttons.c  test_imu.c  test_leds.c  test_mics.c  test_poti.c  test_temp.c
LAB02_InputsInterrupts/LAB02_Delay/: .cproject  .project  CMakeLists.txt  compile_commands.json
LAB02_InputsInterrupts/LAB02_Interrupts/: .cproject  .gitignore  .project  CMakeLists.txt  LAB02_Interrupts.ioc
LAB02_InputsInterrupts/LAB02_Snake/: .cproject  .mxproject  .project  CMakeLists.txt  LAB02_Snake.ioc  compile_commands.json
LAB03_UART/LAB03_Caesar/: .cproject  .mxproject  .project  CMakeLists.txt  LAB03_Caesar.ioc
LAB03_UART/LAB03_TicTacToe/: .cproject  .mxproject  .project  CMakeLists.txt  LAB03_TicTacToe.ioc
LAB03_UART/LAB03_Transmit/: .cproject  .project  CMakeLists.txt  LAB03_Transmit.ioc
LAB03_UART/LAB03_UART_solution/LAB03_TicTacToe_Solution/: .cproject  .mxproject  .project  CMakeLists.txt  LAB03_TicTacToe_Solution.ioc
LAB03_UART/LAB03_UART_solution/LAB03_TicTacToe_Solution/Core/Inc/: main.h  tictactoe.h
LAB03_UART/LAB03_UART_solution/LAB03_TicTacToe_Solution/Core/Src/: main.c  stm32l4xx_hal_msp.c  syscalls.c  the_computer.c
LAB04_I2C/LAB04_I2C/: .cproject  .project  (+2 more)
(+153 files in other folders)
